feat: agregar traducción para el botón de verificar estado de cuenta - Agregar traducciones en español, inglés y francés para el texto del botón - Actualizar template HTML para usar traducción dinámica - Completar soporte multilingüe para todos los elementos del login

--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -192,6 +192,7 @@
     "PROMPT_USERNAME": "Please enter the username to verify:",
     "ACCOUNT_LOCKED": "Account LOCKED",
     "ACCOUNT_ACTIVE": "Account ACTIVE - Not blocked",
-    "ERROR_VERIFYING": "Error verifying account status"
+    "ERROR_VERIFYING": "Error verifying account status",
+    "BUTTON_TEXT": "Check Account Status"
   }
 } 
