--- a/frontend/src/assets/i18n/fr.json
+++ b/frontend/src/assets/i18n/fr.json
@@ -194,6 +194,7 @@
     "PROMPT_USERNAME": "Veuillez entrer le nom d'utilisateur à vérifier:",
     "ACCOUNT_LOCKED": "Compte BLOQUÉ",
     "ACCOUNT_ACTIVE": "Compte ACTIF - Non bloqué",
-    "ERROR_VERIFYING": "Erreur lors de la vérification du statut du compte"
+    "ERROR_VERIFYING": "Erreur lors de la vérification du statut du compte",
+    "BUTTON_TEXT": "Vérifier l'État du Compte"
   }
 } 
